The REST API call api_explore_collaborations() now has filters for year_first, year_last, license, and access
